<resources>
    <string name="app_name">MarKompress Video</string>
    <string name="bottombar_videos">Videos</string>
    <string name="bottombar_settings">Settings</string>
    <string name="bottombar_about">About</string>


    <string name="general_test">TEST</string>
    <string name="settings_enable_service">Enable service</string>
    <string name="keysetting_enable_service">setting_enable_service</string>
    <string name="settings_enable_service_summary_on">Service is on. Your videos will be compressed automatically when the device is charged and not in use.</string>
    <string name="settings_enable_service_summary_off">Service is off. Your videos will NOT be compressed automatically.</string>
    <string name="settingcat_videos">Video Settings</string>
    <string name="keysetting_video_dimen_limit">setting_video_dimen_limit</string>
    <string name="settings_video_dimen_limit">Resolution limit</string>
    <string name="settings_video_dimen_limit_summary">Video larger than %1$1.5s will be scaled to %1$1.5s</string>
    <string name="settings_video_dimen_def">1080</string>
    <string name="keysetting_video_q">setting_video_q</string>
    <string name="settings_video_q">Video quality</string>
    <string name="settings_video_q_summary">%1$s</string>
    <string name="settings_video_q_def">100</string>
    <string name="keysettings_audio_q">setting_audio_q</string>
    <string name="settings_audio_q">Audio quality</string>
    <string name="settings_audio_q_summary">%1$s</string>
    <string name="settings_audio_q_def">-1</string>
    <string name="settingcat_file">File settings</string>
    <string name="keysetting_file_keep_time">setting_file_keep_time</string>
    <string name="settings_file_keep_time">Keep original files for</string>
    <string name="settings_file_keep_time_summary">%1$s</string>
    <string name="settings_file_keep_time_def">24</string>
    <string name="settings_file_trasnscodefrom">Video files directories</string>
    <string name="info_btn_showsplash">SHOW INTRO SPLASH</string>
    <string name="info_text_description">This app designed to re-encode the videos shot on Android device.\nIt uses an external software h.264 (x264) encoder and kicks in only when the device is charged and connected to a charger.\n\nTo see a friendly explanation, click on <b>SHOW INTRO SPLASH</b> above.\n\nWelcome screen icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></string>
    <string name="dialog_permissions_title">Please accept permissions</string>
    <string name="dialog_permissions_msg">This app needs to be granted with the proper permissions to be able to work. Please approve them in the next screen.</string>
    <string name="toast_permissions_not_accepted">Permissions were NOT accepted!</string>
    <string name="keysetting_file_directories">setting_file_directories</string>
    <string name="settings_file_directories_dial_title">Search for videos in these folders</string>
    <string name="settings_file_directories_summary">Look for files to compress in these locations</string>
    <string name="videos_last_refresh_on">Last refresh on: %1$s (%2$d videos)</string>
    <string name="videos_last_refresh_on_none">This screen will be updated soon</string>
    <string name="keysetting_videos_is_refreshing">videos_is_refreshing</string>
    <string name="keysetting_videos_is_refreshing_update">videos_is_refreshing_update</string>
    <string name="keysetting_last_refresh_on_date">keysetting_last_refresh_on_date</string>
    <string name="keysetting_last_refresh_on_num">keysetting_last_refresh_on_num</string>
    <string name="videos_man_service_off">ERROR: can\'t refresh, service is off</string>
    <string name="videos_card_remove_queue">Don\'t compress</string>
    <string name="videos_card_add_queue">Compress</string>
    <string name="videos_card_revert">Revert</string>
    <string name="keysetting_is_ffmpeg_supported">is_ffmpeg_supported</string>
    <string name="dialog_device_not_supported_title">MarKompress is not supported</string>
    <string name="dialog_device_not_supported_message">We are sorry to inform that at this stage MarKompress Video is not supported on this device. Reason: the app failed to load FFMPEG library. You may contact the developer for more information.</string>
    <string name="notification_error_title">Error</string>
    <string name="notification_error_send_to_dev">An error occurred. Please send this notification screenshot to the developer:</string>
    <string name="videos_card_status_queue">in queue</string>
    <string name="videos_card_status_done">converted</string>
    <string name="videos_card_status_bypass">skip</string>
    <string name="videos_card_status_running">converting</string>
    <string name="videos_card_status_reverted">restored</string>
    <string name="videos_card_status_deleted">deleted</string>
    <string name="videos_card_moreinfo_srcvd">Original video</string>
    <string name="videos_card_moreinfo_dimen">Resolution</string>
    <string name="videos_card_moreinfo_size">Size</string>
    <string name="videos_card_moreinfo_file">File location</string>
    <string name="videos_card_moreinfo_duration">Duration</string>
    <string name="videos_card_moreinfo_addedqueue">Added to queue</string>
    <string name="videos_card_moreinfo_proccesed">Converted on</string>
    <string name="videos_card_moreinfo_enctime">Conversion took</string>
    <string name="videos_card_moreinfo_tarvd">Converted video</string>
    <string name="keysetting_is_device_state_encoding_ready">is_device_ready_for_enc</string>
    <string name="notification_fg_service_on_title">Converting</string>
    <string name="notification_fg_service_on_message">Your videos are being converted in the background</string>
    <string name="notification_fg_service_on_message_clips_status">Encoding %1$s.\n%2$d videos left</string>
    <string name="notification_fg_service_on_message_cancelling">Canceling…</string>
    <string name="dialog_revert_title">Revert to original file</string>
    <string name="dialog_revert_msg">Are you sure you want to replace the converted video with the original?</string>
    <string name="dialog_revert_notexist_title">Revert failed</string>
    <string name="dialog_revert_notexist_msg">Sorry but original video backup was erased</string>
    <string name="welcome_screen_1_title">Welcome</string>
    <string name="welcome_screen_1_body">Thank you for downloading MarKompress Video!\n\n</string>
    <string name="welcome_screen_2_title">Save space</string>
    <string name="welcome_screen_2_body">MarKompress Video app will automatically compress your camera videos to smaller file size while retaining similar quality.</string>
    <string name="welcome_screen_3_title">How?</string>
    <string name="welcome_screen_3_body">The mobile realtime video encoder is mostly limited. MarKompress Video uses an advanced software encoder that runs offline.</string>
    <string name="welcome_screen_4_title">Is it a heavy task?</string>
    <string name="welcome_screen_4_body">Yes, but MarKompress Video intelligently runs only when battery is full and the device is connected to charger.\n</string>
    <string name="welcome_screen_5_title">I want the original video back!</string>
    <string name="welcome_screen_5_body">No problem, you can restore the original file. Also you can choose videos to skip or even disable the service.</string>
    <string name="welcome_screen_6_title">Shoot 4K,\ncompress to HQ FHD</string>
    <string name="welcome_screen_6_body">Your device shoots awesome 4K but mediocre FHD? MarKompress Video can downscale your 4K videos to FHD with high quality scalers!</string>
    <string name="welcome_screen_7_title">Free and open source</string>
    <string name="welcome_screen_7_body">MarKompress Video is an open source app.\n\nFor additional information: MaGinMP@gmail.com</string>
    <string name="notifications_channel_name">Notifications</string>

</resources>
